--- a/src/global/styles/vars.sass
+++ b/src/global/styles/vars.sass
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap')
-@import url('https://fonts.googleapis.com/css?family=Muli:200,400,800&display=swap')
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap')
 @import url("https://use.typekit.net/vdd2onk.css")
 // fonts
 $font-1: 'Muli', sans-serif
@@ -10,7 +8,7 @@ $font-1: 'Muli', sans-serif
 .font-1-bold
   font-family: $font-1
   font-weight: 800
-$font-2: futura-pt, sans-serif
+$font-2: 'VT323', monospace
 .font-2
   font-family: $font-2
 
