got my skills in dare like swimwear

--- a/src/global/styles/vars.sass
+++ b/src/global/styles/vars.sass
@@ -21,8 +21,8 @@ $nh-amber: #ffd975
 $lightgrey: #f7f7f7
 $mediumgrey: #DDD
 $darkgrey: #333
-$orange: darkorange
-$red: orangered
+$orange: #EA9842
+$red: #ef591b
 $blue: #00BFFF
 $purple: #821E9A
 $green: #56A344
