--- a/src/global/styles/vars.sass
+++ b/src/global/styles/vars.sass
@@ -2,6 +2,14 @@
   @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap')
   @import url("https://use.typekit.net/vdd2onk.css")
 
+  $font-1: Arial
+  .font-1-bold
+    font-family: $font-1
+
   $font-2: 'VT323', monospace
   .font-2
     font-family: $font-2
+
+
+$orange: #EA9842
+$red: #ef591b
